--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -228,6 +228,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/voucherall"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
